# retronomicon-conversation

./: AGENTS.md  CMakeLists.txt  README.md
include/retronomicon/conversation/: action.h  choice.h  conversation_document.h  conversation_loader.h  conversation_node.h  conversation_state.h
include/retronomicon/lib/conversation/: action.h  choice.h  conversation_loader.h  conversation_node.h  conversation_scene.h  conversation_system.h  speaker.h  vn_textbox_component.h
include/retronomicon/lib/conversation/asset/: conversation_character_module_loader.h
include/retronomicon/lib/conversation/data/: action.h  choice.h  conversation_node.h  speaker.h
include/retronomicon/lib/conversation/input/: conversation_input_component.h
src/: CMakeLists.txt
src/conversation/: conversation_document.cpp  conversation_loader.cpp  conversation_node.cpp  conversation_state.cpp
src/lib/conversation/: CMakeLists.txt  action.cpp  choice.cpp  conversation_loader.cpp  conversation_node.cpp  conversation_scene.cpp  conversation_system.cpp  speaker.cpp  vn_textbox_component.cpp
src/lib/conversation/asset/: conversation_character_module_loader.cpp
src/lib/conversation/data/: action.cpp  choice.cpp  conversation_node.cpp  speaker.cpp
src/lib/conversation/input/: conversation_input_component.cpp
tests/: test_conversation_loader.cpp
